2007-04-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: The counter for X11_GR_BINARY_POLYGON segments must
	be static, so that the count continues after re-entry. Bug #1694162.

	* term/x11.trm (X11_filled_polygon): Use X11_GR_BINARY_POLYGON as
	tag for all segments of a binary filled polygon.  Continuation
	segments were not being marked as binary. It wasn't causing obvious
	problems, but...

2007-04-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c (gprintf):  Accept the ' format specifier, which
	asks for digits to be grouped and separated according to the current
	locale.  We just pass it on to the C library for application.
	Bug #1692550

2007-03-31  Ethan Merritt  <merritt@u.washington.edu>

	* term/wxt.trm (wxt_options) src/wxterminal/wxt_term.h 
	src/wxterminal/gp_cairo.c (gp_cairo_initialize_context)
	src/wxterminal/gp_cairo.h src/wxterminal/wxt_gui.cpp (wxt_graphics):
	Add explicit line cap and join properties for cairo output.
	Allows  "set term wxt {rounded|butt}"

2007-03-29  Juergen Wieferink  <wieferink@freenet.de>

	* src/eval.c src/gp_time.h src/internal.c (f_strftime f_strptime)
	src/internal.h demo/stringvar.dem docs/gnuplot.doc:
	Introduce two new functions 'strftime' and 'strptime', which do
	essentially the same as the standard C functions with the same names,
	but use seconds since 2000 instead of struct tm.
	(Patchset #1199186 July 2005). 

2007-03-29  Ethan Merritt  <merritt@u.washington.edu>

	* demo/4D_data.dem demo/all.dem: Rename demo so that the filename is
	consistent with the demo scripts.

	* missing:  If makeinfo is not found, make the resulting error message
	non-fatal.  Bug #1682491

2007-03-28  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Cross-reference 'set datafile fortran'.

	* plot2d.c (eval_plots) plot3d.c (eval_3dplots): Keep track of whether
	we are in the midst of defining a parametric equation, so that the commas